bump src level to 1.7
svn path=/trunk/; revision=8017


Former-commit-id: a8c9906240fdca8c801e84b191583d31bde158cf